--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 }
 
 [data-contexto="descanso-curto"] {
-    --main-bg-color: linear-gradient(180deg, #0F725C 0%, #041832 48.44%, #01080E 100%);
+    --main-bg-color: linear-gradient(180deg, #0bd92d 0%, #041832 48.44%, #01080E 100%);
 }
 
 [data-contexto="descanso-longo"] {
